# OpenT_A2L-Forge

./: .gitmodules  PLAN.md  PRD.md  README.md  package-lock.json  package.json  playwright.config.ts
.github/: copilot-instructions.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/editors/: AxisPtsEditor.tsx  CharacteristicEditor.tsx  MeasurementEditor.tsx
tests/e2e/: design-demo.spec.ts  elf-integration.spec.ts  entity-browser.spec.ts  entity-editing.spec.ts  large-a2l.spec.ts  mocks.ts  persistence.spec.ts  sanity.spec.ts  smoke.spec.ts  ui-layout.spec.ts
tests/fixtures/a2l/: e2e_editing.a2l  sample.a2l
